change the board array to be shown from the html itself

--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <title>Tic tac</title>
   </head>
   <body>
-    <main class="main"></main>
+    <main class="main">
+      <div class="names">
+        
+      </div>
+      <div class="container">
+        <div class="box" ><p data-box=0  class="symbol"></p></div>
+        <div class="box" ><p data-box=1  class="symbol"></p></div>
+        <div class="box" ><p data-box=2  class="symbol"></p></div>
+        <div class="box"><p  data-box=3 class="symbol"></p></div>
+        <div class="box" ><p data-box=4  class="symbol"></p></div>
+        <div class="box" ><p data-box=5  class="symbol"></p></div>
+        <div class="box" ><p data-box=6  class="symbol"></p></div>
+        <div class="box" ><p data-box=7  class="symbol"></p></div>
+        <div class="box" ><p data-box=8  class="symbol"></p></div>
+      </div>
+    </main>
     <script src="./app.js"></script>
   </body>
 </html>
