change how the symbols are added, creating just one object from wich to create players

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="container">
         <div class="title">
           <h1>Tic-tac-toe</h1>
-          <h2>Welcome, please indentify yourself</h2>
+          <h2>Welcome, enter a cool Name.</h2>
         </div>
-        <div class="names">
+        <form class="names">
           <div class="form">
             <div class="input-fields">
               <!-- Player 1 name -->
@@ -26,12 +26,12 @@
             </div>
             <!-- Buttons -->
             <div class="btns">
-              <input class="btn btn--Play" type="submit" value="Play">
+              <button class="btn btn--Play" type="submit" >Play!</button>
               <button class="btn">Play with A.I.</button>
             </div>
           </div>
-      </div>
-      <div class="board-container sr-only">
+      </form>
+      <div class="board-container">
         <div class="box" ><p data-box=0  class="symbol"></p></div>
         <div class="box" ><p data-box=1  class="symbol"></p></div>
         <div class="box" ><p data-box=2  class="symbol"></p></div>
