add board when play btn is pressed

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             </div>
             <!-- Buttons -->
             <div class="btns">
-              <button class="btn btn--Play" type="submit" >Play!</button>
+              <button class="btn btn--play" type="submit" >Play!</button>
               <button class="btn">Play with A.I.</button>
             </div>
           </div>
       </form>
-      <div class="board-container">
+      <div class="board-container banish ">
         <div class="box" ><p data-box=0  class="symbol"></p></div>
         <div class="box" ><p data-box=1  class="symbol"></p></div>
         <div class="box" ><p data-box=2  class="symbol"></p></div>
