publish project on TOP

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- Buttons -->
             <div class="btns">
               <button class="btn btn--play" type="submit" >Play!</button>
-              <button class="btn">Play with A.I.</button>
+              <button class="btn btn--a-i">Play with A.I.</button>
             </div>
           </div>
       </form>
