--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <div class="box" ><p data-box=6  class="symbol symbol--6"></p></div>
         <div class="box" ><p data-box=7  class="symbol symbol--7"></p></div>
         <div class="box" ><p data-box=8  class="symbol symbol--8"></p></div>
-        <button class="btn btn--reset">reset</button>
       </div>
+      <button class="btn btn--reset banish">reset</button>
     </div>
     </main>
     <script src="./app.js"></script>
